<resources>
    <string name="app_name">Vocabulary Trainer</string>
    <string name="confirmation_dialog">Are you sure you want to add words?</string>
    <string name="caption_save">Save</string>
    <string name="m_vocabulary">Vocabulary</string>
    <string name="m_categories">Categories</string>
    <string name="m_trainings">Trainings</string>
    <string name="m_library">Library</string>
    <string name="m_settings">Settings</string>
    <string name="p_target_language">Languages</string>
    <string name="p_select_target_language">Select target language</string>
    <string name="vocabulary_title">Vocabulary</string>
    <string name="v_mi_add_new_word">Add new..</string>
    <string-array name="test_vocabulary_array">
        <item>Oksana;Оксана</item>
        <item>soon;незабаром</item>
        <item>Hew year;новий рік</item>
        <item>good morning;добрий ранок</item>
        <item>good;добрий</item>
        <item>morning;ранок</item>
        <item>new;новий</item>
        <item>year;рік</item>
    </string-array>
    <string-array name="vocabulary_array">
        <item>seatbelt;ремінь безпеки</item>
        <item>ticket;квиток</item>
        <item>gate;вихід (на посадку)</item>
        <item>security;контроль безпеки</item>
        <item>passport;паспорт</item>
        <item>turbulence;турбулентність</item>
        <item>connecting flight;політ із пересадками</item>
        <item>to land;приземляти</item>
        <item>helicopter;вертоліт</item>
        <item>check-in desk;стіл реєстрації</item>
        <item>hand luggage;ручна поклажа</item>
        <item>baggage;багаж</item>
        <item>boarding card;посадковий талон</item>
        <item>arrivals;прибуття</item>
        <item>departures;відправлення</item>
        <item>runway;злітно-посадочна смуга</item>
        <item>flight attendant;бортпровідник</item>
        <item>pilot;пілот</item>
        <item>aisle seat;місце біля проходу</item>
        <item>window seat;місце біля вікна</item>
        <item>take-off;зліт</item>
    </string-array>
    <string name="add_word_dlg_title">New word</string>
    <string name="add_word_dlg_hint_native_word">native word</string>
    <string name="add_word_dlg_hint_translation_word">translation word</string>
    <string name="requered_field_is_empty">Some data is empty</string>
    <string name="trainings_title">Trainings</string>
    <string name="t_word_translate_1">Ukr to En</string>
    <string name="t_word_translate_2">En to Ukr</string>
    <string name="wt_hint_button">Hint</string>
    <string name="wt_next_button">Next</string>
    <string name="wt_know_button">Know</string>
    <string name="wt_translateWord">Translate Word</string>
    <string name="no_word_for_training">No words for study</string>
    <string name="dlg_tr_stats_correct_answer_count_caption">Correct answers: </string>
    <string name="dlg_tr_stats_wrong_answer_count_caption">Wrong answers: </string>
    <string name="categories_title">Categories</string>
    <string name="c_mi_add_all_to_study">Add all to study</string>
    <string name="c_mi_select_words_to_study">Select words to study</string>
    <plurals name="c_toast_words_added">
        <item quantity="one">Word was added to the vocabulary.</item>
        <item quantity="other">Words were added to the vocabulary.</item>
    </plurals>
    <string name="cat_clothes_title">Clothes</string>
    <string name="cat_traits_title">Traits</string>
    <string name="cat_sport_title">Sport</string>
    <string name="cat_weather_title">Weather</string>
    <string name="cat_work_title">Work</string>
    <string name="cat_study_title">Study</string>
    <string name="cat_body_title">Body</string>
    <string name="cat_color_title">Color</string>
    <string name="cat_transport_title">Transport</string>
    <string name="cat_animals_title">Animal</string>
    <string-array name="cat_clothes_array">
        <item>belt;ремінь</item>
        <item>blouse;блуза</item>
        <item>cardigan;кардиган</item>
        <item>dress;cукня</item>
        <item>gloves;рукавички</item>
        <item>jacket;куртка</item>
        <item>jeans;джинси</item>
        <item>jumper;перемичка</item>
        <item>overcoat;пальто</item>
        <item>pullover;пуловер</item>
        <item>raincoat;плащ</item>
        <item>scarf;шарф</item>
        <item>shirt;сорочка</item>
        <item>t-shirt;футболка</item>
        <item>tie;краватка </item>
        <item>skirt;спідниця</item>
        <item>mini-skirt;міні-спідниця</item>
        <item>shorts;шорти</item>
        <item>socks;шкарпетки</item>
        <item>suit;костюм</item>
        <item>sweater;светр</item>
        <item>trousers;брюки</item>
        <item>jogging suit;спортивний костюм</item>
        <item>tracksuit;спортивний костюм</item>
        <item>bikini;бікіні</item>
        <item>swimming trunks;плавки</item>
        <item>boots;черевики</item>
        <item>sandals;сандалі</item>
        <item>slippers;тапки</item>
        <item>shoes;взуття</item>
        <item>sneakers;кросівки</item>
        <item>bra;бюстгальтер</item>
        <item>knickers;дамські панталони</item>
        <item>panties;трусики</item>
        <item>pants;брюки</item>
        <item>tights;колготки</item>
        <item>vest;жилет</item>
        <item>hat;капелюх</item>
        <item>helmet;шолом</item>
        <item>cotton;бавовна</item>
        <item>denim;джинси</item>
        <item>leather;шкіра</item>
        <item>linen;білизна</item>
        <item>rubber;гумовий</item>
        <item>silk;шовк</item>
        <item>suede;замша</item>
        <item>wool;вовна</item>
        <item>woolen;шерстяний</item>
        <item>plastic;пластик</item>
        <item>nylon;нейлон</item>
        <item>polyester;поліестер</item>
        <item>fashion;мода</item>
        <item>fashionable;модний</item>
        <item>trend;тенденція</item>
        <item>trendy;модний</item>
        <item>unfashionable;немодний</item>
        <item>flowery;квітчастий</item>
        <item>patterned;візерунковий</item>
        <item>spot;пляма</item>
        <item>spotted;плямистий</item>
        <item>stripe;смуга</item>
        <item>striped;смугастий</item>
        <item>contact lenses;контактні лінзи</item>
        <item>earrings;сережки</item>
        <item>glasses;окуляри</item>
        <item>jewelry;ювелірні вироби</item>
        <item>ring;кільце</item>
    </string-array>
</resources>