<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/vocabulary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/m_vocabulary"
        android:onClick="onClick" />
    <Button
        android:id="@+id/categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_categories"
        android:onClick="onClick" />
    <Button
        android:id="@+id/trainings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_trainings"
        android:onClick="onClick" />
    <Button
        android:id="@+id/liblary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_library" />
    <Button
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_settings" 
        android:onClick="onClick" />
</LinearLayout>